手机端投票页面

--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
@@ -157,8 +157,8 @@
                     return false;
                 }
                  W.getApi().call({
-                        app: 'm/apps/lottery',
-                        resource: 'lottery_prize',
+                        app: 'm/apps/exlottery',
+                        resource: 'exlottery_prize',
                         method: 'post',
                         args:{
                             id: W.appRecordId,
@@ -374,7 +374,7 @@
         };
     </script>
     <script type="text/javascript">
-        var lottery_status, can_play_count, resultDialog, activity_status, prizeIndex;
+        var exlottery_status, can_play_count, resultDialog, activity_status, prizeIndex;
         if(!W.isPC){
             $(function(){
                 getDynamicData();
@@ -391,7 +391,7 @@
                 window.setTimeout(function(){
                     $(_that).removeClass('xa-lottery-go-to');
                 }, 100);
-                if(lottery.isRolling || !lottery_status || can_play_count==0){
+                if(lottery.isRolling || !exlottery_status || can_play_count==0){
                     if(lottery.isRolling) return false;
                     if(activity_status == '未开始'){
                         resultDialog.render({
@@ -407,8 +407,8 @@
                     return false;
                 }else{
                     W.getApi().call({
-                        app: 'm/apps/lottery',
-                        resource: 'lottery_prize',
+                        app: 'm/apps/exlottery',
+                        resource: 'exlottery_prize',
                         method: 'put',
                         args:{
                             id: W.appRecordId,
@@ -435,8 +435,8 @@
         function getDynamicData(){
             loadingStatus(true);
             W.getApi().call({
-                app: 'm/apps/lottery',
-                resource: 'm_lottery',
+                app: 'm/apps/exlottery',
+                resource: 'm_exlottery',
                 method: 'get',
                 args: {
                     webapp_owner_id: W.webappOwnerId,
@@ -446,7 +446,7 @@
                     console.log(data);
                     var member_info = data.member_info;
                     renderDynamicData(member_info);
-                    getHistory(data.lottery_history);
+                    getHistory(data.exlottery_history);
                     initLottery();
                     loadingStatus(false);
                 },
@@ -462,7 +462,7 @@
         }
 
         function renderDynamicData(member_info){
-            lottery_status = member_info.lottery_status;
+            exlottery_status = member_info.lottery_status;
             activity_status = member_info.activity_status;
             W.isMember = member_info.isMember;
             //可参与次数
