修改签到的面包屑

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -188,7 +188,7 @@ ui-appPage-commonStyle">
     <ul class="breadcrumb">
       <li>您当前所在位置</li>
       <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
-      <li class="active">新建</li>
+      <li class="active">签到</li>
     </ul>
   </div>
 
