--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_code_store.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_code_store.html
@@ -157,7 +157,7 @@
 		//搜索
 		$('.xa-search').click(function(event){
 			var code = $.trim($('[name="code"]').val());
-			var memeber = $.trim($('[name="member"]').val());
+			var member = $.trim($('[name="member"]').val());
 			var status = $('[name="status"]').val();
 			var table = $('[data-ui-role="advanced-table"]').data('view');
 			table.reload({
