--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
@@ -462,7 +462,7 @@
         }
 
         function renderDynamicData(member_info){
-            exlottery_status = member_info.lottery_status;
+            exlottery_status = member_info.exlottery_status;
             activity_status = member_info.activity_status;
             W.isMember = member_info.isMember;
             //可参与次数
