修改签到优惠明细

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -652,7 +652,7 @@ ui-appPage-commonStyle">
 
             $('body').delegate(".xa-coupon", 'click', function(event){
                 var memberId = $(event.currentTarget).attr('member_id');
-                    W.dialog.showDialog('W.member.dialog.MemberDetailCouponsDialog', {
+                    W.dialog.showDialog('W.dialog.app.sign.MemberDetailSignCouponsDialog', {
                         memberId: memberId
                     });
             });
