--- a/weapp/mall/templates/mall/editor/sender_info_list.html
+++ b/weapp/mall/templates/mall/editor/sender_info_list.html
@@ -34,7 +34,7 @@
 	<div>
 		<ul class="xui-senderNav">
 		<li style="border-bottom: 3px solid #0088CC;"><a href="/mall2/sender_info_list">发件人信息</a></li>
-		<li><a href="mall2/address_1">快递账号管理</a></li>
+		<li><a href="/mall2/sender_account">快递账号管理</a></li>
 	</ul>
 	</div>
 	
@@ -62,7 +62,7 @@
 {% verbatim %}
  <script id="mall-orders-sender" type="text/x-jquery-tmpl">
  	{{if items!='' }}
-	<table class="table ml8">
+	<table class="table">
 		<thead>
 			<tr class="xui-trHeight" style="background:#c9d1e4;">
 				<!--<th width="80">默认</th>-->
