--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
@@ -440,7 +440,8 @@
                 method: 'get',
                 args: {
                     webapp_owner_id: W.webappOwnerId,
-                    id: W.appRecordId
+                    id: W.appRecordId,
+                    code: "{{code}}"
                 },
                 success: function(data) {
                     console.log(data);
