修复一些问题

--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_more_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_more_evaluates.html
@@ -16,6 +16,7 @@
         text-align: center;
         line-height: 35px;
         color:#333;
+        z-index: 10004;
     }
     .xui-reviewAllPage .xui-title a{
         height: 35px;
@@ -74,7 +75,7 @@
 {% block content-panel %}
 <div class="xui-reviewAllPage xui-page xa-page">
     <div class="xui-title pr">
-        <a class="xa-goBack xui-returnPrev pa" id="goBack">
+        <a class="xa-goBack xui-returnPrev pa wa-goBack" id="goBack">
             <i></i>
         </a>
         <span class="em9">更多评价</span>
