--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -18,6 +18,7 @@
         display: inline-block;
         position: absolute;
         left:0;
+        z-index: 10004;
     }
     .xui-productReviewListPage .xui-title i{
         display: inline-block;
@@ -113,7 +114,7 @@
 {% block content-panel %}
 <div class="xui-productReviewListPage pb20">
     <div class="xui-title pr">
-        <a class="xa-goBack xui-returnPrev pa" id="goBack">
+        <a class="xa-goBack xui-returnPrev pa wa-goBack" id="goBack">
             <i></i>
         </a>
         <span class="em9">我的评价</span>
