--- a/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
@@ -4,7 +4,7 @@
     <!--R-->
     <div class="wui-evaluate-container wa-evaluate-container">
         <div class="wui-title pr">
-            <a class="xa-goBack xui-returnPrev pa">
+            <a class="xa-goBack xui-returnPrev pa wa-goBack">
                 <i id="goBack"></i>
             </a>
             <span class="em9">发表评价</span>
