--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -370,6 +370,17 @@ ui-appPage-commonStyle">
           for (var i = 0; i < pages.length; ++i) {
             //xlog("pages[i]:");xlog(pages[i]);
             var page = W.component.Component.parseJSON(pages[i]);
+						//微众商城的去除自动回复
+						var username = "{{request.manager.username}}";
+						if (username== "jobs"){
+							for (var j in page.components[0].fields){
+								var field = page.components[0].fields[j];
+								if (field.name == 'reply_keyword' || field.name == 'reply_content'){
+									field.isUserProperty=false
+								}
+							}
+						}
+
             if (isCreateNewData) {
               page.isNewCreated = true;
             }
