--- a/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
@@ -38,7 +38,7 @@
             border: none;
         }
         .propertyGroup_property_horizontalField .propertyGroup_property_label {
-            width: 67px;
+            width: 91px;
         }
         .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
             cursor: pointer;
@@ -53,6 +53,10 @@
             margin-top: -2px;
             margin-left: -72px;
             border-radius: 4px;
+        }
+
+        .xui-workbench-rightPanel{
+            max-width:572px; 
         }
     </style>
 {% endblock %}
