--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluate.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluate.html
@@ -116,7 +116,9 @@
             }else{
                 $('.wa-submitTermite').html('追加晒图');
             }
-            $('#dj_review_detail').val(detail || '').attr('readonly', true).siblings().hide();
+            if(typeof detail == 'string'){
+                $('#dj_review_detail').val(detail || '').attr('readonly', true).siblings().hide();
+            }
             $('.wa-limitNum').hide();
             //渲染动态组件数据, 根据之前的评价数据判断是否渲染
             if(typeof detail != 'string'){
