--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -214,7 +214,7 @@
         });
 
         $('.xa-shopReply').find('p').addClass('em9','c65');
-        $('.xa-shopReply').find('p img').addClass('vm');
+        $('.xa-shopReply').find('p img').addClass('vt');
     });
 </script>
 {% endblock %}
